doclane/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doclane-backend
  labels:
    app: doclane-backend
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: doclane-backend
  template:
    metadata:
      labels:
        app: doclane-backend
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: backend
          image: ghcr.io/documentlane/doclane-backend:latest
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doclane-frontend
  labels:
    app: doclane-frontend
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: doclane-frontend
  template:
    metadata:
      labels:
        app: doclane-frontend
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: frontend
          image: ghcr.io/documentlane/doclane-frontend:latest
          ports:
            - containerPort: 3000
